kustomize/cloudflared/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '2000'
  labels:
    app.kubernetes.io/name: cloudflared
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: cloudflared
  ports:
  - port: 2000
    targetPort: metrics
