kustomize/cloudflared/networkpolicy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  egress:
    - toFQDNs:
        - matchName: region1.v2.argotunnel.com
        - matchName: region2.v2.argotunnel.com
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
      # Let's Encrypt HTTP-01 challenges outside Kubernetes cluster
    - toCIDR:
        - "192.168.91.10/32"  # NAS incl. Minio
        - "192.168.201.11/32" # NAS2 (secondary location)
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
